apps/teslamate/grafana/networkpolicies/egress-teslamate-grafana.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-teslamate-grafana
  namespace: teslamate
spec:
  selector: app == 'teslamate-grafana'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'teslamate-postgres'
        ports:
          - 5432
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
        ports:
          - 8443
