apps/teslamate/grafana/networkpolicies/ingress-teslamate-grafana.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-teslamate-grafana
  namespace: teslamate
spec:
  selector: app == 'teslamate-grafana'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 3000
