apps/teslamate/grafana/networkpolicies/teslamate-grafana-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: teslamate-grafana-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'teslamate'
        selector: app == 'teslamate-grafana'
        ports:
          - 3000
