apps/teslamate/grafana/networkpolicies/traefik-egress-teslamate-grafana.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: traefik-egress-teslamate-grafana
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'teslamate'
        selector: app == 'teslamate-grafana'
        ports:
          - 3000
